<resources>
    <string name="app_name">Gazeta Dev</string>
    <string name="all">All</string>
    <string name="home">All</string>
    <string name="youtube">YouTube</string>
    <string name="articles">Articles</string>
    <string name="podcasts">Podcasts</string>
    <string name="twitch">Twitch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_externally">Open externally</string>
    <string name="live">Live</string>
</resources>